docs: refresh route
